--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Install dependencies
         #The run keyword tells the job to execute a command on the runner.
         #installs pip and flake 8 also if requirements.txt is present then installs all the dependencies specified there
-        run: |
-          python -m pip install --upgrade pip
-          #TODO: Install flak8 using pip command here
+        run: python -m pip install --upgrade pip
+        run: pip install flake8
+          #TODO: Install flake8 using pip command here
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Display Python version
@@ -43,7 +43,7 @@ jobs:
 
       - name: Lint with flake8
         #runs flake8 over the code
-        run: |
+        run: 
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -51,5 +51,5 @@ jobs:
 
       - name: Test with unittest
         #runs the unittest
-        run: |
+        run: python unit_tests.py
           #TODO: Add the command to run all the unittest here.
