--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -26,17 +26,18 @@ jobs:
         #This step uses the actions/setup-python@v4 action to install the 
         #specified version of the python (this example uses v3.x which is the latest minor version in 3.x series). 
         #This puts both the python commands in your PATH.
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
       - name: Install dependencies
         #The run keyword tells the job to execute a command on the runner.
         #installs pip and flake 8 also if requirements.txt is present then installs all the dependencies specified there
         run: python -m pip install --upgrade pip
-        run: pip install flake8
+      - run: pip install flake8
           #TODO: Install flake8 using pip command here
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      # if [ -f requirements.txt ]; then 
+      #  pip install -r requirements.txt; 
+      #  fi
 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
@@ -47,7 +48,7 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Test with unittest
         #runs the unittest
