--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -33,11 +33,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest unittest
+          python -m pip install flake8 pytest 
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       # Run the test scripts
       - name: Test with unittest
         run: |
-          python -m unittest unittest/unit_test.py
-          python -m unittest unittest/unit_test_2.py
+          python -m unittest test/unit_test.py
+          python -m unittest test/unit_test_2.py
