--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,15 +19,18 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
-          python-version:
+          python-version: ${{ matrix.python-version }}
 
       # Install the same dependencies as the project 
       - name: Install dependencies
@@ -35,7 +38,14 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest 
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
+      
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
       # Run the test scripts
       - name: Test with unittest
         run: |
