--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          pytest /home/runner/work/week11-CI-Lab/week11-CI-Lab/test/unit_tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+          python -m pytest
